Make specialties an array and prevent wrapping within a specialty.

--- a/src/styles/modules/Header.less
+++ b/src/styles/modules/Header.less
@@ -23,9 +23,12 @@
     }
   }
 
-  &-specialty {
-    font-size: @ratio-Scale--10;
+  &-specialties {
     line-height: @ratio-Scale--15;
     margin: 0;
+  }
+
+  &-specialty {
+    white-space: nowrap;
   }
 }
